# my-tauri

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  renovate.json
.changes/: 14089-expose-scrollbarstyle-webview-option-to-tauri-api.md  14089-expose-scrollbarstyle-webview-option-to-tauri-config.md  14089-expose-scrollbarstyle-webview-option-to-tauri.md  CHANGES.md  about-blank-ignore.md  adaptive_icons.md  add-plugin-listener-error-handling.md  android-app-plugin.md  android-external-files-fix.md  android-init-windows-unix.md  android-plugin-bool-is-deserialize.md  appimage-32bit.md  auto-increment-android-version-code.md  back-button-press-api.md  binary-patching-32-bit.md  bump-version-num-bigint-dig.md  bundler-inline-linuxdeploy-plugins.md  bundler-user-agent.md  bundler-warning.md  cargo-mobile-0.21.md  cargo-mobile2.md  change-pr-13253.md  change-pr-14379.md  change-pr-14632.md  change-pr-14766.md  change-pr-14812.md  change-pr-14824.md  change-pr-14836.md  check-mismatched-versions-tauri-info.md  codegen-custom-context-assets-fix.md  config.json  data-dir-js.md  default-log-level.md  docsrs.md  empty-vec-instead-of-none.md  ensure-android-env.md  ensure-targets-mobile.md  extended-hooks.md  features-separator.md  file-association-content-type.md  (+71 more)
.github/: CONTRIBUTING.md
.github/workflows/: covector-version-or-publish.yml  publish-cli-js.yml  publish-cli-rs.yml
.scripts/ci/: check-change-tags.js  check-license-header.js
bench/src/: build_benchmark_jsons.rs  run_benchmark.rs  utils.rs
crates/tauri/: CHANGELOG.md  Cargo.toml  build.rs
crates/tauri-build/: CHANGELOG.md  Cargo.toml
crates/tauri-build/src/: acl.rs  lib.rs  mobile.rs
crates/tauri-build/src/codegen/: context.rs
crates/tauri-bundler/: CHANGELOG.md  Cargo.toml
crates/tauri-bundler/src/: bundle.rs  error.rs
crates/tauri-bundler/src/bundle/: settings.rs  updater_bundle.rs
crates/tauri-bundler/src/bundle/kmp/: mod.rs
crates/tauri-bundler/src/bundle/linux/: appimage.rs  debian.rs  rpm.rs
crates/tauri-bundler/src/bundle/linux/appimage/: linuxdeploy-plugin-gstreamer.sh  linuxdeploy-plugin-gtk.sh  linuxdeploy.rs  mod.rs
crates/tauri-bundler/src/bundle/linux/freedesktop/: mod.rs
crates/tauri-bundler/src/bundle/macos/: app.rs  ios.rs  sign.rs
crates/tauri-bundler/src/bundle/macos/dmg/: mod.rs
crates/tauri-bundler/src/bundle/windows/: mod.rs  sign.rs  util.rs
crates/tauri-bundler/src/bundle/windows/msi/: mod.rs
crates/tauri-bundler/src/bundle/windows/nsis/: mod.rs
crates/tauri-bundler/src/bundle/windows/nsis/languages/: Norwegian.nsh
crates/tauri-bundler/src/utils/: http_utils.rs
crates/tauri-cli/: CHANGELOG.md  Cargo.toml  ENVIRONMENT_VARIABLES.md  config.schema.json  metadata-v2.json
crates/tauri-cli/src/: add.rs  build.rs  bundle.rs  completions.rs  dev.rs  error.rs  icon.rs  init.rs  inspect.rs  lib.rs  remove.rs
crates/tauri-cli/src/acl/: mod.rs
crates/tauri-cli/src/acl/capability/: new.rs
crates/tauri-cli/src/acl/permission/: add.rs  ls.rs  new.rs  rm.rs
crates/tauri-cli/src/dev/: builtin_dev_server.rs
crates/tauri-cli/src/helpers/: app_paths.rs  cargo.rs  cargo_manifest.rs  config.rs  flock.rs  fs.rs  http.rs  mod.rs  npm.rs  pbxproj.rs  plist.rs  prompts.rs  template.rs  updater_signature.rs
crates/tauri-cli/src/info/: app.rs  env_system.rs  mod.rs  packages_nodejs.rs  plugins.rs
crates/tauri-cli/src/interface/: mod.rs  rust.rs
crates/tauri-cli/src/interface/rust/: cargo_config.rs  desktop.rs  installation.rs  manifest.rs
crates/tauri-cli/src/migrate/: mod.rs
crates/tauri-cli/src/migrate/migrations/: v2_beta.rs
crates/tauri-cli/src/migrate/migrations/v1/: config.rs  frontend.rs  manifest.rs  mod.rs
crates/tauri-cli/src/mobile/: init.rs  mod.rs
crates/tauri-cli/src/mobile/android/: android_studio_script.rs  build.rs  dev.rs  mod.rs  project.rs  run.rs
crates/tauri-cli/src/mobile/ios/: build.rs  dev.rs  mod.rs  project.rs  run.rs  xcode_script.rs
crates/tauri-cli/src/plugin/: android.rs  init.rs  ios.rs  mod.rs  new.rs
crates/tauri-cli/src/signer/: generate.rs  sign.rs
crates/tauri-cli/templates/mobile/android/buildSrc/src/main/kotlin/: BuildTask.kt
crates/tauri-codegen/: CHANGELOG.md  Cargo.toml
crates/tauri-codegen/src/: context.rs  embedded_assets.rs
crates/tauri-driver/: CHANGELOG.md  Cargo.toml
crates/tauri-driver/src/: webdriver.rs
crates/tauri-macos-sign/: CHANGELOG.md  Cargo.toml
crates/tauri-macos-sign/src/: certificate.rs  keychain.rs  lib.rs  provisioning_profile.rs
crates/tauri-macos-sign/src/keychain/: identity.rs
crates/tauri-macros/: CHANGELOG.md  Cargo.toml
crates/tauri-plugin/: CHANGELOG.md  Cargo.toml
crates/tauri-runtime/: CHANGELOG.md  Cargo.toml
crates/tauri-runtime-wry/: CHANGELOG.md  Cargo.toml
crates/tauri-runtime/src/: lib.rs  webview.rs  window.rs
crates/tauri-schema-worker/: Cargo.toml  package.json  wrangler.toml
crates/tauri-utils/: CHANGELOG.md  Cargo.toml
crates/tauri-utils/src/: config.rs  html.rs  lib.rs  platform.rs  resources.rs  tokens.rs
crates/tauri-utils/src/acl/: build.rs  mod.rs  schema.rs
crates/tauri-utils/src/config/: parse.rs
crates/tauri-utils/src/config_v1/: mod.rs
crates/tauri/mobile/android-codegen/: TauriActivity.kt
crates/tauri/mobile/android/src/main/java/app/tauri/plugin/: Plugin.kt  PluginManager.kt
crates/tauri/permissions/app/autogenerated/: reference.md
crates/tauri/scripts/: bundle.global.js  ipc-protocol.js
crates/tauri/src/: app.rs  ios.rs  lib.rs  pattern.rs  plugin.rs  process.rs
crates/tauri/src/app/: plugin.rs
crates/tauri/src/ipc/: channel.rs  mod.rs
crates/tauri/src/manager/: mod.rs  webview.rs
crates/tauri/src/path/: android.rs  desktop.rs  mod.rs  plugin.rs
crates/tauri/src/protocol/: asset.rs  mod.rs  tauri.rs
crates/tauri/src/test/: mock_runtime.rs  mod.rs
crates/tauri/src/tray/: mod.rs
crates/tauri/src/webview/: mod.rs  webview_window.rs
crates/tauri/src/window/: mod.rs
crates/tauri/src/window/scripts/: drag.js
examples/api/: package.json  unocss.config.js
examples/file-associations/: README.md
(+18 files in other folders)
