[package]
name = "tauri-build"
version = "2.5.3"
description = "build time code to pair with https://crates.io/crates/tauri"
exclude = ["CHANGELOG.md", "/target"]
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = [
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-linux-android",
  "x86_64-apple-ios",
]

[dependencies]
anyhow = "1"
quote = { version = "1", optional = true }
tauri-codegen = { version = "2.5.2", path = "../tauri-codegen", optional = true }
tauri-utils = { version = "2.8.1", path = "../tauri-utils", features = [
  "build",
  "resources",
] }
cargo_toml = "0.22"
serde = "1"
serde_json = "1"
heck = "0.5"
json-patch = "3"
walkdir = "2"
tauri-winres = "0.3"
semver = "1"
dirs = "6"
glob = "0.3"
toml = "0.9"
# Our code requires at least 0.8.21 so don't simplify this to 0.8
schemars = { version = "0.8.21", features = ["preserve_order"] }

[features]
default = ["config-json"]
codegen = ["tauri-codegen", "quote"]
isolation = ["tauri-codegen/isolation", "tauri-utils/isolation"]
config-json = []
config-json5 = ["tauri-utils/config-json5"]
config-toml = ["tauri-utils/config-toml"]
