[package]
name = "tauri-bundler"
version = "2.7.5"
authors = [
  "George Burton <burtonageo@gmail.com>",
  "Tauri Programme within The Commons Conservancy",
]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
license = "Apache-2.0 OR MIT"
keywords = ["bundle", "cargo", "tauri"]
repository = "https://github.com/tauri-apps/tauri"
description = "Wrap rust executables in OS-specific app bundles for Tauri"
edition = "2021"
rust-version = "1.77.2"
exclude = ["CHANGELOG.md", "/target", "rustfmt.toml"]

[dependencies]
tauri-utils = { version = "2.8.1", path = "../tauri-utils", features = [
  "resources",
] }
image = "0.25"
flate2 = "1"
thiserror = "2"
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
strsim = "0.11"
tar = "0.4"
walkdir = "2"
handlebars = "6"
tempfile = "3"
log = { version = "0.4.21", features = ["kv"] }
dirs = "6"
os_pipe = "1"
ureq = { version = "3", default-features = false, features = ["socks-proxy"] }
native-tls = { version = "0.2", optional = true }
hex = "0.4"
semver = "1"
sha1 = "0.10"
sha2 = "0.10"
zip = { version = "4", default-features = false, features = ["deflate"] }
dunce = "1"
url = "2"
uuid = { version = "1", features = ["v4", "v5"] }
regex = "1"
goblin = "0.9"
plist = "1"


[target."cfg(target_os = \"windows\")".dependencies]
bitness = "0.4"
windows-registry = "0.5"
glob = "0.3"

[target."cfg(target_os = \"windows\")".dependencies.windows-sys]
version = "0.60"
features = ["Win32_System_SystemInformation", "Win32_System_Diagnostics_Debug"]

[target."cfg(target_os = \"macos\")".dependencies]
icns = { package = "tauri-icns", version = "0.1" }
time = { version = "0.3", features = ["formatting"] }
tauri-macos-sign = { version = "2.3.2", path = "../tauri-macos-sign" }

[target."cfg(target_os = \"linux\")".dependencies]
heck = "0.5"
ar = "0.9"
md5 = "0.8"
rpm = { version = "0.16", features = ["bzip2-compression"] }

[target."cfg(unix)".dependencies]
which = "8"

[lib]
name = "tauri_bundler"
path = "src/lib.rs"

[features]
default = ["rustls", "platform-certs"]
native-tls = ["ureq/native-tls"]
native-tls-vendored = ["native-tls", "native-tls/vendored"]
rustls = ["ureq/rustls"]
platform-certs = ["ureq/platform-verifier"]
